Fixed addresses whitespaces

--- a/UI/components/CompanyLocation/CompanyLocation.module.scss
+++ b/UI/components/CompanyLocation/CompanyLocation.module.scss
@@ -29,6 +29,7 @@
 .addressText {
   @include fontSize(14px, 150%);
 
+  max-width: 276px;
   margin: 0;
   white-space: pre-line;
 }
